# Homework4

./: CMakeLists.txt
data/: grouped_percolation.gp  individual_plotpercolation.gp  percolation_data_L_10.csv  percolation_data_L_10.txt  percolation_data_L_100.txt  percolation_data_L_105.txt  percolation_data_L_110.txt  percolation_data_L_115.txt  percolation_data_L_12.csv  percolation_data_L_120.txt  percolation_data_L_125.txt  percolation_data_L_130.txt  percolation_data_L_135.txt  percolation_data_L_14.csv  percolation_data_L_140.txt  percolation_data_L_145.txt  percolation_data_L_15.txt  percolation_data_L_150.txt  percolation_data_L_155.txt  percolation_data_L_16.csv  percolation_data_L_160.txt  percolation_data_L_165.txt  percolation_data_L_170.txt  percolation_data_L_175.txt  percolation_data_L_18.csv  percolation_data_L_180.txt  percolation_data_L_185.txt  percolation_data_L_190.txt  percolation_data_L_195.txt  percolation_data_L_2.csv  percolation_data_L_20.csv  percolation_data_L_20.txt  percolation_data_L_200.txt  percolation_data_L_22.csv  percolation_data_L_225.txt  percolation_data_L_24.csv  percolation_data_L_25.txt  percolation_data_L_250.txt  percolation_data_L_26.csv  percolation_data_L_275.txt  (+40 more)
src/: main.cxx  main_revised.cxx  main_union.cxx
